--- a/index.html
+++ b/index.html
@@ -2,133 +2,225 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/25e6250ecd.js" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/25e6250ecd.js" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/style.css">
+  <title>Document</title>
 </head>
 
 <body>
-    <header>
-        <div class="pago-online"><a href="">Pago en linea ▼</a></div>
-        <nav>
-            <div>
-                <h2> <a href="index.html"><i class="fa-regular fa-gem"></i>Flex </a></h2>
-            </div>
-            <div class="desplegable">
-                <div class="dropdown">
-                    <span> <a href="./pages/hombre.html">Hombre</a></span>
-                    <div class="dropdown-content">
-                        <a href="#">Zapatillas</a>
-                        <a href="#">Buzos</a>
-                        <a href="#">Remeras</a>
-                    </div>
-                </div>
+  <header>
+    <div class="pago-online"><a href="">Pago en linea ▼</a></div>
+    <nav>
+      <div>
+        <a href=""> <img src="./assets/adidaslogo.jpg" alt="" class="logo"></a>
 
-                <div class="dropdown">
-                    <span><a href="./pages/mujer.html">Mujer</a></span>
-                    <div class="dropdown-content">
-                        <a href="#">Vestidos</a>
-                        <a href="#">Faldas</a>
-                        <a href="#">Blusas</a>
-                    </div>
-                </div>
 
-                <div class="dropdown">
-                    <span> <a href="./pages/niños.html">Niños</a></span>
-                    <div class="dropdown-content">
-                        <a href="#">Ropa de bebé</a>
-                        <a href="#">Ropa de niño</a>
-                        <a href="#">Ropa de niña</a>
-                    </div>
-                </div>
-                <div class="dropdown">
-                    <span> <a href="./pages/niños.html">Ofertas</a></span>
-                    <div class="dropdown-content">
-                        <a href="#">Zapatillas</a>
-                        <a href="#">Buzos</a>
-                        <a href="#">Remeras</a>
-                    </div>
-                </div>
-            </div>
-            <div class="cont-busqueda">
-                <input type="search" placeholder="Buscar">
-                <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
+      </div>
+      <div class="desplegable">
+        <div class="dropdown">
+          <span> <a href="./pages/hombre.html">Hombre</a></span>
+          <div class="dropdown-content">
+            <a href="#">Zapatillas</a>
+            <a href="#">Buzos</a>
+            <a href="#">Remeras</a>
+          </div>
+        </div>
 
-            </div>
-            <div class="carrito-cuenta">
-                <ul>
-                    <li><a href="./pages/cuenta.html"><i class="fa-regular fa-user"></i></a></li>
-                    <li><a href=""><i class="fa-regular fa-heart"></i></a></li>
-                    <li><a href="./pages/carrito.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
+        <div class="dropdown">
+          <span><a href="./pages/mujer.html">Mujer</a></span>
+          <div class="dropdown-content">
+            <a href="#">Vestidos</a>
+            <a href="#">Faldas</a>
+            <a href="#">Blusas</a>
+          </div>
+        </div>
 
-                </ul>
-            </div>
-        </nav>
-    </header>
-    <div class="unite">
-        <p>Suscribite y obtene 15% de descuento <a href="" class="unite-boton">Unite ya</a></p>
+        <div class="dropdown">
+          <span> <a href="./pages/niños.html">Niños</a></span>
+          <div class="dropdown-content">
+            <a href="#">Ropa de bebé</a>
+            <a href="#">Ropa de niño</a>
+            <a href="#">Ropa de niña</a>
+          </div>
+        </div>
+        <div class="dropdown">
+          <span> <a href="./pages/niños.html">Ofertas</a></span>
+          <div class="dropdown-content">
+            <a href="#">Zapatillas</a>
+            <a href="#">Buzos</a>
+            <a href="#">Remeras</a>
+          </div>
+        </div>
+      </div>
+      <div class="cont-busqueda">
+        <input type="search" placeholder="Buscar">
+        <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
+
+      </div>
+      <div class="carrito-cuenta">
+        <ul>
+          <li><a href="./pages/cuenta.html"><i class="fa-regular fa-user"></i></a></li>
+          <li><a href=""><i class="fa-regular fa-heart"></i></a></li>
+          <li><a href="./pages/carrito.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
+
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <div class="unite">
+    <p>Suscribite y obtene 15% de descuento <a href="" class="unite-boton">Unite ya</a></p>
+  </div>
+
+
+  <div class="cont-gif">
+    <img src="./assets/adidasgif.gif" alt="" class="gif-adidas">
+  </div>
+  <div class="botones">
+    <button>Comprar ahora <i class="fa-solid fa-arrow-right-long"></i></button>
+    <button>Conoce mas <i class="fa-solid fa-arrow-right-long"></i></button>
+
+  </div>
+  <section class="equipos">
+    <div>
+      <h2>Encontra tu equipo</h2>
     </div>
-
-
-    <div class="cont-gif">
-        <img src="./assets/adidasgif.gif" alt="" class="gif-adidas">
+    <div class="escudos">
+      <img src="./assets/argentina.avif" alt="">
+      <img src="./assets/river.avif" alt="">
+      <img src="./assets/boca.avif" alt="">
+      <img src="./assets/juventus.avif" alt="">
+      <img src="./assets/bayern.avif" alt="">
+      <img src="./assets/madrid.avif" alt="">
+      <img src="./assets/united.avif" alt="">
+      <img src="./assets/arsenal.avif" alt="">
     </div>
-    <div class="botones">
-        <button>Comprar ahora <i class="fa-solid fa-arrow-right-long"></i></button>
-        <button>Conoce mas <i class="fa-solid fa-arrow-right-long"></i></button>
-
+  </section>
+  <section class="novedades-cont">
+    <div class="novedades">
+      <i class="fa-solid fa-arrow-right-long"></i>
+      <h2>Novedades</h2>
     </div>
-    <section class="equipos">
-        <div>
-            <h2>Encontra tu equipo</h2>
+    <div class="cont-todo">
+      <a href="" class="todo">Ver todo</a>
+      <a href=""><i class="fa-solid fa-angle-left"></i></a>
+      <a href=""><i class="fa-solid fa-angle-right"></i></a>
+    </div>
+  </section>
+  <section>
+    <section class="productos-novedades">
+      <div class="cont-producto">
+        <div class="producto">
+          <p>$ 24.999</p>
+          <a href=""><i class="fa-solid fa-heart-circle-plus"></i></a>
         </div>
-        <div class="escudos">
-            <img src="./assets/argentina.avif" alt="">
-            <img src="./assets/river.avif" alt="">
-            <img src="./assets/boca.avif" alt="">
-            <img src="./assets/juventus.avif" alt="">
-            <img src="./assets/bayern.avif" alt="">
-            <img src="./assets/madrid.avif" alt="">
-            <img src="./assets/united.avif" alt="">
-            <img src="./assets/arsenal.avif" alt="">
+        <div class="p-cont">
+          <p> Adidas basketball</p>
+          <p>Basquet</p>
+          <p> nuevo</p>
         </div>
+
+      </div>
+      <div class="cont-producto">
+        <div class="producto">
+          <p>$ 24.999</p>
+          <a href=""><i class="fa-solid fa-heart-circle-plus"></i></a>
+        </div>
+        <div class="p-cont">
+          <p> Adidas basketball</p>
+          <p>Basquet</p>
+          <p> nuevo</p>
+        </div>
+
+      </div>
+      <div class="cont-producto">
+        <div class="producto">
+          <p>$ 24.999</p>
+          <a href=""><i class="fa-solid fa-heart-circle-plus"></i></a>
+        </div>
+        <div class="p-cont">
+          <p> Adidas basketball</p>
+          <p>Basquet</p>
+          <p> nuevo</p>
+        </div>
+      </div>
+      <div class="cont-producto">
+        <div class="producto">
+          <p>$ 24.999</p>
+          <a href=""><i class="fa-solid fa-heart-circle-plus"></i></a>
+        </div>
+        <div class="p-cont">
+          <p> Adidas basketball</p>
+          <p>Basquet</p>
+          <p> nuevo</p>
+        </div>
+      </div>
+      <div class="cont-producto">
+        <div class="producto">
+          <p>$ 24.999</p>
+          <a href=""><i class="fa-solid fa-heart-circle-plus"></i></a>
+        </div>
+        <div class="p-cont">
+          <p> Adidas basketball</p>
+          <p>Basquet</p>
+          <p> nuevo</p>
+        </div>
+      </div>
     </section>
-    <section class="novedades-cont">
-        <div class="novedades">
-            <i class="fa-solid fa-arrow-right-long"></i>
-            <h2>Novedades</h2>
+    <section class="tendencias">
+      <h2>Tendencias</h2>
+      <div class="card-cont">
+        <div class="card-tendencia">
+          <img src="./assets/cardtendencia1.avif" alt="">
+          <div>
+            <h3>Adueñate de la ciudad con estilo y comodidad</h3>
+            <p>Llegó el momento de recorrer la ciudad como nunca antes</p>
+            <a href="">Comprar ahora</a>
+          </div>
+
         </div>
-        <div class="cont-todo">
-          <a href="" class="todo">Ver todo</a>
-            <a href=""><i class="fa-solid fa-angle-left"></i></a>
-            <a href=""><i class="fa-solid fa-angle-right"></i></a>
+        <div class="card-tendencia">
+          <img src="./assets/cardtendencia2.avif" alt="">
+          <div>
+            <h3>Las 3 tiras son para siempre</h3>
+            <p>El pasado se transforma para el presente.El estilo clásico en version adicolor </p>
+            <a href="">Comprar ahora</a>
+          </div>
         </div>
+        <div class="card-tendencia">
+          <img src="./assets/cardtendencia3.avif" alt="">
+          <div>
+            <h3>Precios justos</h3>
+            <p>Aprovecha nuestors procutos con hasta 3 cuotas sin interés</p>
+            <a href="">Comprar ahora</a>
+          </div>
+        </div>
+        <div class="card-tendencia">
+          <img src="./assets/cardtendencia4.avif" alt="">
+          <div>
+            <h3>El fin de los residuos plásticos </h3>
+            <p>Nuestro planeta se colapsa debido al impacto de nuestras exigencias.Está en nuestras manos encontrar una
+              solucion</p>
+            <a href="">Comprar ahora</a>
+          </div>
+        </div>
+
+
+      </div>
+
     </section>
-    <section>
-        <a href="">
-            <div>
-                <img src="./assets/adidasbasket.avif" alt="" class="basket">
-                <a href=""><i class="fa-regular fa-heart"></i></a>
-            <p>$24999</p>
-            <p>Remera adidas basketball</p>
-            <p>basquet </p>
-            <p>nuevo</p>
-        </div>
-        </a>
-        
-    </section>
+
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
-        integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
-        crossorigin="anonymous"></script>
+      integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
+      crossorigin="anonymous"></script>
     <script src="index.js"></script>
 </body>
 
