--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
     <nav>
       <div>
         <a href=""> <img src="./assets/adidaslogo.jpg" alt="" class="logo"></a>
-
-
       </div>
       <div class="desplegable">
         <div class="dropdown">
@@ -30,7 +28,6 @@
             <a href="#">Remeras</a>
           </div>
         </div>
-
         <div class="dropdown">
           <span><a href="./pages/mujer.html">Mujer</a></span>
           <div class="dropdown-content">
@@ -39,7 +36,6 @@
             <a href="#">Blusas</a>
           </div>
         </div>
-
         <div class="dropdown">
           <span> <a href="./pages/niños.html">Niños</a></span>
           <div class="dropdown-content">
@@ -60,14 +56,12 @@
       <div class="cont-busqueda">
         <input type="search" placeholder="Buscar">
         <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
-
       </div>
       <div class="carrito-cuenta">
         <ul>
           <li><a href="./pages/cuenta.html"><i class="fa-regular fa-user"></i></a></li>
           <li><a href=""><i class="fa-regular fa-heart"></i></a></li>
           <li><a href="./pages/carrito.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
-
         </ul>
       </div>
     </nav>
@@ -75,15 +69,12 @@
   <div class="unite">
     <p>Suscribite y obtene 15% de descuento <a href="" class="unite-boton">Unite ya</a></p>
   </div>
-
-
   <div class="cont-gif">
     <img src="./assets/adidasgif.gif" alt="" class="gif-adidas">
   </div>
   <div class="botones">
     <button>Comprar ahora <i class="fa-solid fa-arrow-right-long"></i></button>
     <button>Conoce mas <i class="fa-solid fa-arrow-right-long"></i></button>
-
   </div>
   <section class="equipos">
     <div>
@@ -111,117 +102,216 @@
       <a href=""><i class="fa-solid fa-angle-right"></i></a>
     </div>
   </section>
-  <section>
-    <section class="productos-novedades">
-      <div class="cont-producto">
-        <div class="producto">
-          <p>$ 24.999</p>
-          <a href=""><i class="fa-solid fa-heart-circle-plus"></i></a>
-        </div>
-        <div class="p-cont">
-          <p> Adidas basketball</p>
-          <p>Basquet</p>
-          <p> nuevo</p>
-        </div>
-
+  <section class="productos-novedades">
+    <div class="cont-producto">
+      <div class="producto">
+        <p>$ 24.999</p>
+        <a href=""><i class="fa-solid fa-heart-circle-plus"></i></a>
       </div>
-      <div class="cont-producto">
-        <div class="producto">
-          <p>$ 24.999</p>
-          <a href=""><i class="fa-solid fa-heart-circle-plus"></i></a>
-        </div>
-        <div class="p-cont">
-          <p> Adidas basketball</p>
-          <p>Basquet</p>
-          <p> nuevo</p>
-        </div>
-
-      </div>
-      <div class="cont-producto">
-        <div class="producto">
-          <p>$ 24.999</p>
-          <a href=""><i class="fa-solid fa-heart-circle-plus"></i></a>
-        </div>
-        <div class="p-cont">
-          <p> Adidas basketball</p>
-          <p>Basquet</p>
-          <p> nuevo</p>
-        </div>
-      </div>
-      <div class="cont-producto">
-        <div class="producto">
-          <p>$ 24.999</p>
-          <a href=""><i class="fa-solid fa-heart-circle-plus"></i></a>
-        </div>
-        <div class="p-cont">
-          <p> Adidas basketball</p>
-          <p>Basquet</p>
-          <p> nuevo</p>
-        </div>
-      </div>
-      <div class="cont-producto">
-        <div class="producto">
-          <p>$ 24.999</p>
-          <a href=""><i class="fa-solid fa-heart-circle-plus"></i></a>
-        </div>
-        <div class="p-cont">
-          <p> Adidas basketball</p>
-          <p>Basquet</p>
-          <p> nuevo</p>
-        </div>
-      </div>
-    </section>
-    <section class="tendencias">
-      <h2>Tendencias</h2>
-      <div class="card-cont">
-        <div class="card-tendencia">
-          <img src="./assets/cardtendencia1.avif" alt="">
-          <div>
-            <h3>Adueñate de la ciudad con estilo y comodidad</h3>
-            <p>Llegó el momento de recorrer la ciudad como nunca antes</p>
-            <a href="">Comprar ahora</a>
-          </div>
-
-        </div>
-        <div class="card-tendencia">
-          <img src="./assets/cardtendencia2.avif" alt="">
-          <div>
-            <h3>Las 3 tiras son para siempre</h3>
-            <p>El pasado se transforma para el presente.El estilo clásico en version adicolor </p>
-            <a href="">Comprar ahora</a>
-          </div>
-        </div>
-        <div class="card-tendencia">
-          <img src="./assets/cardtendencia3.avif" alt="">
-          <div>
-            <h3>Precios justos</h3>
-            <p>Aprovecha nuestors procutos con hasta 3 cuotas sin interés</p>
-            <a href="">Comprar ahora</a>
-          </div>
-        </div>
-        <div class="card-tendencia">
-          <img src="./assets/cardtendencia4.avif" alt="">
-          <div>
-            <h3>El fin de los residuos plásticos </h3>
-            <p>Nuestro planeta se colapsa debido al impacto de nuestras exigencias.Está en nuestras manos encontrar una
-              solucion</p>
-            <a href="">Comprar ahora</a>
-          </div>
-        </div>
-
-
+      <div class="p-cont">
+        <p> Adidas basketball</p>
+        <p>Basquet</p>
+        <p> nuevo</p>
       </div>
 
-    </section>
+    </div>
+    <div class="cont-producto">
+      <div class="producto">
+        <p>$ 24.999</p>
+        <a href=""><i class="fa-solid fa-heart-circle-plus"></i></a>
+      </div>
+      <div class="p-cont">
+        <p> Adidas basketball</p>
+        <p>Basquet</p>
+        <p> nuevo</p>
+      </div>
+    </div>
+    <div class="cont-producto">
+      <div class="producto">
+        <p>$ 24.999</p>
+        <a href=""><i class="fa-solid fa-heart-circle-plus"></i></a>
+      </div>
+      <div class="p-cont">
+        <p> Adidas basketball</p>
+        <p>Basquet</p>
+        <p> nuevo</p>
+      </div>
+    </div>
+    <div class="cont-producto">
+      <div class="producto">
+        <p>$ 24.999</p>
+        <a href=""><i class="fa-solid fa-heart-circle-plus"></i></a>
+      </div>
+      <div class="p-cont">
+        <p> Adidas basketball</p>
+        <p>Basquet</p>
+        <p> nuevo</p>
+      </div>
+    </div>
+    <div class="cont-producto">
+      <div class="producto">
+        <p>$ 24.999</p>
+        <a href=""><i class="fa-solid fa-heart-circle-plus"></i></a>
+      </div>
+      <div class="p-cont">
+        <p> Adidas basketball</p>
+        <p>Basquet</p>
+        <p> nuevo</p>
+      </div>
+    </div>
+  </section>
+  <section class="tendencias">
+    <h2>Tendencias</h2>
+    <div class="card-cont">
+      <div class="card-tendencia">
+        <img src="./assets/cardtendencia1.avif" alt="">
+        <div>
+          <h3>Adueñate de la ciudad con estilo y comodidad</h3>
+          <p>Llegó el momento de recorrer la ciudad como nunca antes</p>
+          <a href="">Comprar ahora</a>
+        </div>
+      </div>
+      <div class="card-tendencia">
+        <img src="./assets/cardtendencia2.avif" alt="">
+        <div>
+          <h3>Las 3 tiras son para siempre</h3>
+          <p>El pasado se transforma para el presente.El estilo clásico en version adicolor </p>
+          <a href="">Comprar ahora</a>
+        </div>
+      </div>
+      <div class="card-tendencia">
+        <img src="./assets/cardtendencia3.avif" alt="">
+        <div>
+          <h3>Precios justos</h3>
+          <p>Aprovecha nuestors procutos con hasta 3 cuotas sin interés</p>
+          <a href="">Comprar ahora</a>
+        </div>
+      </div>
+      <div class="card-tendencia">
+        <img src="./assets/cardtendencia4.avif" alt="">
+        <div>
+          <h3>El fin de los residuos plásticos </h3>
+          <p>Nuestro planeta se colapsa debido al impacto de nuestras exigencias.Está en nuestras manos encontrar una
+            solucion</p>
+          <a href="">Comprar ahora</a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="mejor">
+    <div class="mejorAdidas">
+      <h2>Lo mejor de adidas</h2>
+    </div>
+    <div class="cont-todo">
+      <a href=""><i class="fa-solid fa-angle-left"></i></a>
+      <a href=""><i class="fa-solid fa-angle-right"></i></a>
+    </div>
+  </section>
+  <section class="productos-novedades">
+    <div class="cont-producto">
+      <div class="producto">
+        <p>$ 24.999</p>
+        <a href=""><i class="fa-solid fa-heart-circle-plus"></i></a>
+      </div>
+      <div class="p-cont">
+        <p> Adidas basketball</p>
+        <p>Basquet</p>
+        <p> nuevo</p>
+      </div>
+
+    </div>
+    <div class="cont-producto">
+      <div class="producto">
+        <p>$ 24.999</p>
+        <a href=""><i class="fa-solid fa-heart-circle-plus"></i></a>
+      </div>
+      <div class="p-cont">
+        <p> Adidas basketball</p>
+        <p>Basquet</p>
+        <p> nuevo</p>
+      </div>
+    </div>
+    <div class="cont-producto">
+      <div class="producto">
+        <p>$ 24.999</p>
+        <a href=""><i class="fa-solid fa-heart-circle-plus"></i></a>
+      </div>
+      <div class="p-cont">
+        <p> Adidas basketball</p>
+        <p>Basquet</p>
+        <p> nuevo</p>
+      </div>
+    </div>
+    <div class="cont-producto">
+      <div class="producto">
+        <p>$ 24.999</p>
+        <a href=""><i class="fa-solid fa-heart-circle-plus"></i></a>
+      </div>
+      <div class="p-cont">
+        <p> Adidas basketball</p>
+        <p>Basquet</p>
+        <p> nuevo</p>
+      </div>
+    </div>
+    <div class="cont-producto">
+      <div class="producto">
+        <p>$ 24.999</p>
+        <a href=""><i class="fa-solid fa-heart-circle-plus"></i></a>
+      </div>
+      <div class="p-cont">
+        <p> Adidas basketball</p>
+        <p>Basquet</p>
+        <p> nuevo</p>
+      </div>
+    </div>
+  </section>
+  <section class="articulos">
+    <article class="hijodeputa">
+      <h2>HISTORIA, MODA Y ROPA DEPORTIVA ADIDAS DESDE 1949</h2>
+      <p>El deporte nos mantiene en forma. Te mantiene atento. Nos une. A través del deporte podemos cambiar vidas. Ya
+        sea a través de historias de atletas inspiradores. Animándote a ponerte en marcha. Ofreciéndote artículos
+        deportivos con las últimas tecnologías para mejorar tu rendimiento. Superá tu mejor marca personal. adidas es el
+        hogar del corredor, del jugador de básquet, del joven futbolista y del entusiasta del fitness. Del aventurero
+        que escapa de la ciudad los fines de semana. De la instructora de yoga que enseña nuevas posturas. Las 3 Tiras
+        se ven en el mundo de la música. En el escenario, en los festivales. Nuestra ropa deportiva para mujer y para
+        hombre te mantiene concentrado antes de que suene el silbato. Durante la carrera. Y en la línea de meta.
+        Apoyamos a los creadores. Estamos aquí para apoyar a los creadores. Sus vidas. Y cambiar el mundo.</p>
+      <br>
+      <p>adidas es mucho más que ropa deportiva y ropa de entrenamiento. Nos asociamos con los mejores de la industria
+        para co-crear. De esta manera, ofrecemos a nuestras seguidores la ropa deportiva y los estilos que mejor se
+        adaptan a sus necesidades deportivas, sin dejar de lado la sostenibilidad. Apoyamos a los creadores Mejorar su
+        juego. Creamos el cambio. Y pensamos en el impacto que tenemos en nuestro mundo.</p>
+    </article>
+    <article>
+      <h2>TU CASA DE DEPORTES PARA CUALQUIER DEPORTE</h2>
+      <p>adidas diseña ropa deportiva para atletas de todo tipo. Creadores que disfrutan de cambiar las reglas del
+        juego. Desafiar las convenciones. Romper las normas y definir nuevas. Y volverlas a romper. Confeccionamos la
+        ropa que visten equipos y jugadores individuales en preparación para el partido. Para que no pierdan la
+        concentración. Diseñamos indumentaria deportiva para que llegues a la meta. Para que ganes el partido. Nuestras
+        tiendas deportivas ofrecen atuendos para mujeres, con tops deportivos y calzas diseñados con un objetivo en
+        mente. Para deportes de impacto bajo, medio o alto. Diseñamos, innovamos e iteramos. Ponemos a prueba nuevas
+        tecnologías. En el campo, en la cancha, en la pista, en la piscina. La ropa deportiva retro inspira nuevos
+        elementos esenciales de la ropa urbana. Como las camperas adidas y los conjuntos Firebird. Los modelos
+        deportivos clásicos vuelven a la vida. Como las Stan Smith y las Superstar. Ahora en todas las calles y en los
+        escenarios más destacados.</p>
+      <br>
+      <p>A través de nuestras colecciones eliminamos las barreras entre la moda de alta costura y el mejor rendimiento.
+        Por ejemplo, nuestra colección de ropa deportiva adidas by Stella McCartney está pensada para ofrecer un look
+        sofisticado dentro y fuera del gimnasio. O algunas de nuestras prendas de estilo urbano adidas Originals también
+        pueden usarse como ropa deportiva. Nuestras vidas están cambiando constantemente. Cada vez son más versátiles. Y
+        en adidas diseñamos pensando en eso.</p>
+    </article>
+
+  </section>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
-      integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
-      crossorigin="anonymous"></script>
-    <script src="index.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
+    integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
+    crossorigin="anonymous"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
