--- a/index.html
+++ b/index.html
@@ -301,9 +301,21 @@
         pueden usarse como ropa deportiva. Nuestras vidas están cambiando constantemente. Cada vez son más versátiles. Y
         en adidas diseñamos pensando en eso.</p>
     </article>
-
   </section>
-
+  <section class="popular">
+    <h2>Popular ahora</h2>
+    <div class="popular-botones">
+      <div><a href="">Selección de <br>Argentina</a></div>
+      <div><a href="">Colección <br>Sostenible</a></div>
+      <div class="d-flex align-items-end"><a href="">Boca Juniors</a></div>
+      <div><a href="">River Plate</a></div>
+      <div><a href="">Zapatillas</a></div>
+      <div><a href="">Precios Justos</a></div>
+    </div>
+  </section>
+  <section class="registrate">
+    <h2> UNITE AL CLUB Y CONSEGUI UN 15% DE DESCUENTO <a href="">REGISTRATE GRATIS <i class="fa-solid fa-arrow-right-long"></i></a> </h2>
+  </section>
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
