segunda pre-entrega

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <header>
+  <!-- <header>
     <div class="pago-online"><a href="">Pago en linea ▼</a></div>
     <nav>
       <div>
@@ -315,7 +315,7 @@
   </section>
   <section class="registrate">
     <h2> UNITE AL CLUB Y CONSEGUI UN 15% DE DESCUENTO <a href="">REGISTRATE GRATIS <i class="fa-solid fa-arrow-right-long"></i></a> </h2>
-  </section>
+  </section> -->
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
